[BNY-955] Added dependecies and resolved the issues faced on run time

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,17 @@
     <groupId>org.sample.poc</groupId>
     <artifactId>SamplePOC</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-bundle-plugin</artifactId>
+                    <version>${maven.bundle.plugin.version}</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
     <dependencies>
         <dependency>
             <groupId>org.wso2.carbon.identity.inbound.auth.oauth2</groupId>
